2009-09-19  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/commands/user.jl
	* lisp/sawfish/wm/workspace.jl: move display-workspace-name & helpers to workspace.jl

2009-09-15  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/util/prompt-extras.jl: fixed a newly introduced bug [Matthew Love]

	* man/sawfish.texi: added section to info file [Luis Rodrigo Gallardo Cruz]

	* scripts/Makefile.in: also expand REP_ENVIRON here [Luis Rodrigo Gallardo Cruz]

	* lisp/sawfish/wm/commands/move-resize.jl: change cursor to hand2 on move
	                                           change cursor to crosshair on resize

	* OPTIONS: small update

	* man/sawfish.1
	* man/sawfish-client.1
	* man/sawfish-ui.1: added man-page for sawfish 
	                 added man-page for sawfish-client
			 added man-page for sawfish-ui
			 -- [Debian]

	* man/Makefile.in: actually build FAQ
	                   removed sawfish.dvi target
			   removed sawfish.ps target

	* man/news.texi: updated

2009-09-14  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/match-window.jl: string change in rename-window
	                                       improved keymap-trans
					       renamed rename-window to rename-window-func
					       fixed a glitch in rename-window-func

	* OPTIONS: small update

2009-09-13  Christopher Bratusek <zanghar@freenet.de>
	* sawfish.doap: added

	* lisp/sawfish/wm/commands/user.jl: added display-workspace-name
	                                    clipboard-preview-clip-length is now a defcustom
					    clipboard-preview-timeout is now a defcustom

	* OPTIONS
	* man/news.texi: updated

2009-09-12  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/focus.jl: doc for focus-revert
	                            indention improvements
				    -- [Teika Kazura]
	
	* man/news.texi: major rewrite of 1.5.0 section [Teika Kazura]
	                 updated

	* sawfish.desktop
	* sawfish-session.desktop