@@ -83,6 +83,8 @@ your system, but the later doesn't
 
 @item Added @code{display-message-with-timeout} @code{browser} commands [Christopher Bratusek]
 
+@item Added @code{move-window-center} command [Christopher Bratusek]
+
 @item Added @code{viewport-windows} function (equivalent to workspace-windows) [Jeremy Hankins]
 
 @item Added viewport-boundary-mode @code{dynamic} (creates a new viewport then hitting the screen-edge) [Jeremy Hankins]
