@@ -2,6 +2,14 @@
 	* lisp/sawfish/wm/commands/user.jl
 	* lisp/sawfish/wm/workspace.jl: move display-workspace-name & helpers to workspace.jl
 
+	* man/sawfish.texi
+	* lisp/sawfish/wm/autoload.jl
+	* lisp/sawfish/wm/commands/move-resize.jl: added move-window-center command
+
+	* man/sawfish.texi: fixed a glitch
+
+	* man/news.texi: updated
+
 2009-09-15  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/util/prompt-extras.jl: fixed a newly introduced bug [Matthew Love]
 
